# ChessCPP

./: .gitignore  .travis.yml  CMakeLists.txt  DataLoading.cpp  DataLoading.h  README.md  SaveLoad.cpp  SaveLoad.hpp  configWorker.cpp  configWorker.h  debug_func.cpp  debug_func.hpp  figure_class.cpp  figure_class.hpp  figure_movement.cpp  figure_movement.hpp  figure_rules.cpp  figure_rules.hpp  legacyCode  main.cpp  movement.cpp  movement.hpp  settings.cpp  settings.hpp  simple-documentation.txt  types.h
.github/workflows/: ccpp.yml  main.yml
CI/: CMakeListsCI.txt
installer/_macOS/: installer.py
installer/macOS/: installer.py
installer/macOS/resources/: config.txt  savedGame.txt
